--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/promise.prototype.finally": "^2.0.2",
     "eslint": "^5.0.1"
   },
   "scripts": {
@@ -14,6 +15,7 @@
   },
   "dependencies": {
     "@types/node": "^10.5.2",
+    "promise.prototype.finally": "^3.1.0",
     "typescript": "^2.9.2"
   }
 }
